--- a/3 yes.html
+++ b/3 yes.html
@@ -16,6 +16,7 @@
         <button class="btn" id="yesButton" onclick="nextPage()">
         Let's Fix a Date
       </button>
+            <a class="whatsapp" href="https://wa.me/qr/KI3IX6Z3QJHIH1">DM me on whatsapp</a>
     </div>
 </body>
 
